@@ -4,7 +4,9 @@ import org.apache.commons.lang3.StringUtils;
 import tw.com.rex.txt2epub.model.TxtContent;
 import tw.com.rex.txt2epub.service.TxtHandlerService;
 
+import javax.imageio.ImageIO;
 import javax.swing.*;
+import javax.swing.filechooser.FileFilter;
 import javax.swing.filechooser.FileNameExtensionFilter;
 import java.awt.*;
 import java.io.File;
@@ -16,12 +18,13 @@ public class MainFrame extends JFrame {
     private final JLabel selectedLabel;
     private final GridBagConstraints bag;
     private final JLabel outputFilePath;
+    private final JLabel coverPath;
     private final JFileChooser chooser;
 
     public MainFrame() throws HeadlessException {
         pane = this.getContentPane();
 
-        selectedLabel = new JLabel("請選擇");
+        selectedLabel = new JLabel();
         selectedLabel.setName("selectedFilePath");
         // selectedLabel = new JLabel("D:/Rex/Downloads/曹賊.txt");
         selectedLabel.setPreferredSize(new Dimension(300, 25));
@@ -30,9 +33,12 @@ public class MainFrame extends JFrame {
         bag.fill = GridBagConstraints.HORIZONTAL;
         bag.insets = new Insets(3, 3, 3, 3);
 
-        outputFilePath = new JLabel("請選擇");
+        outputFilePath = new JLabel();
         outputFilePath.setName("outputFilePath");
         // outputFilePath = new JLabel("D:/Temp/曹賊.txt");
+
+        coverPath = new JLabel();
+        coverPath.setName("coverPath");
 
         chooser = new JFileChooser();
         chooser.setName("chooser");
@@ -53,6 +59,7 @@ public class MainFrame extends JFrame {
         pane.setLayout(new GridBagLayout());
         selectFileArea();
         outputFileArea();
+        coverArea();
         executeArea();
     }
 
@@ -88,7 +95,7 @@ public class MainFrame extends JFrame {
     }
 
     private void selectFile() {
-        FileNameExtensionFilter txtFileFilter = new FileNameExtensionFilter("", "txt");
+        FileFilter txtFileFilter = new FileNameExtensionFilter("txt filter", "txt");
         chooser.setFileFilter(txtFileFilter);
         chooser.setFileSelectionMode(JFileChooser.FILES_ONLY);
         int dialog = chooser.showOpenDialog(pane);
@@ -107,6 +114,37 @@ public class MainFrame extends JFrame {
 
     private void selectOutputPath() {
         chooser.setFileSelectionMode(JFileChooser.DIRECTORIES_ONLY);
+        chooser.setFileFilter(null);
+        int dialog = chooser.showOpenDialog(null);
+        if (dialog == JFileChooser.APPROVE_OPTION) {
+            File selectedFile = chooser.getSelectedFile();
+            outputFilePath.setText(selectedFile.getPath());
+        }
+    }
+
+    private void coverArea() {
+        bag.weightx = 0.2;
+        bag.gridx = 0;
+        bag.gridy = 2;
+        pane.add(selectCoverImageButton(), bag);
+
+        bag.weightx = 0.8;
+        bag.gridx = 1;
+        bag.gridy = 2;
+        pane.add(coverPath, bag);
+    }
+
+    private JButton selectCoverImageButton() {
+        JButton result = new JButton("請選擇封面");
+        result.setName("selectCoverImage");
+        result.addActionListener(e -> selectCoverImage());
+        return result;
+    }
+
+    private void selectCoverImage() {
+        FileFilter imageFilesFilter = new FileNameExtensionFilter("image files", ImageIO.getReaderFileSuffixes());
+        chooser.setFileFilter(imageFilesFilter);
+        chooser.setFileSelectionMode(JFileChooser.FILES_ONLY);
         int dialog = chooser.showOpenDialog(null);
         if (dialog == JFileChooser.APPROVE_OPTION) {
             File selectedFile = chooser.getSelectedFile();
@@ -117,7 +155,7 @@ public class MainFrame extends JFrame {
     private void executeArea() {
         bag.weightx = 0.0;
         bag.gridx = 0;
-        bag.gridy = 5;
+        bag.gridy = 3;
         bag.gridwidth = 2;
 
         JButton doExecuteBtn = new JButton("開始轉換");
@@ -137,12 +175,10 @@ public class MainFrame extends JFrame {
 
     private boolean verify() {
         StringBuilder error = new StringBuilder();
-        String selectedFile = selectedLabel.getText().replace("請選擇", "");
-        if (selectedFile.isBlank()) {
+        if (StringUtils.isBlank(selectedLabel.getText())) {
             error.append("請選擇檔案\n");
         }
-        String outputPath = outputFilePath.getText().replace("請選擇", "");
-        if (outputPath.isBlank()) {
+        if (StringUtils.isBlank(outputFilePath.getText())) {
             error.append("請選擇輸出路徑\n");
         }
         if (StringUtils.isNotBlank(error.toString())) {
